--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -149,10 +149,13 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 
 ==Danish==
 
+===Etymology===
+{{bor|da|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+
 ===Noun===
 {{da-noun}}
 
-# [[vodka]]
+# [[#English|vodka]]
 
 ====Declension====
 {{da-decl|en|er}}
@@ -161,11 +164,11 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 
 ==Finnish==
 
-===Etymology===
-From {{etyl|ru|fi}}
-
 ===Alternative forms===
 * {{l|fi|votka}}
+
+===Etymology===
+{{bor|fi|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
 
 ===Noun===
 {{fi-noun}}
@@ -183,13 +186,16 @@ From {{etyl|ru|fi}}
 
 ==French==
 
+===Etymology===
+{{bor|fr|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+
 ===Pronunciation===
 * {{audio|Fr-vodka.ogg|Audio|lang=fr}}
 
 ===Noun===
 {{fr-noun|f}}
 
-# [[vodka#English|vodka]]
+# [[#English|vodka]]
 
 ===Further reading===
 * {{R:TLFi}}
@@ -200,6 +206,9 @@ From {{etyl|ru|fi}}
 
 ==Hungarian==
 
+===Etymology===
+{{bor|hu|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+
 ===Pronunciation===
 * {{hu-IPA}}
 * {{hyphenation|vod|ka|lang=hu}}
@@ -207,7 +216,7 @@ From {{etyl|ru|fi}}
 ===Noun===
 {{hu-noun|pl=vodkák}}
 
-# [[vodka#English|vodka]]
+# [[#English|vodka]]
 
 ====Declension====
 {{hu-infl-nom|vodká|o}}{{hu-pos-tok|vodká}}
@@ -219,13 +228,16 @@ From {{etyl|ru|fi}}
 ==Icelandic==
 {{wikipedia|lang=is}}
 
+===Etymology===
+{{bor|is|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
+
 ===Pronunciation===
 * {{IPA|/ˈvɔt.kʰa/|lang=is}}
 
 ===Noun===
 {{is-noun|n|vodka|-}}
 
-# [[vodka#English|vodka]]
+# [[#English|vodka]]
 
 ====Declension====
 {{is-decl-noun-n-w|v|o|dk|a|pl=-}}
@@ -236,6 +248,9 @@ From {{etyl|ru|fi}}
 
 ==Italian==
 {{wikipedia|lang=it}}
+
+===Etymology===
+{{bor|it|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
 
 ===Noun===
 {{head|it|noun|g=f|invariable}}
@@ -249,7 +264,7 @@ From {{etyl|ru|fi}}
 ==Norman==
 
 ===Etymology===
-{{bor|nrf|en|vodka}}.
+{{bor|nrf|en|vodka}}, from {{bor|nrf|ru|во́дка|notext=1}}, diminutive of {{m|ru|вода́|t=water}}.
 
 ===Noun===
 {{nrf-noun|m}}
@@ -264,7 +279,7 @@ From {{etyl|ru|fi}}
 {{wikipedia|lang=no}}
 
 ===Etymology===
-From {{etyl|ru|nb}} {{m|ru|водка}}.
+{{bor|nb|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
 
 ===Pronunciation===
 * {{IPA|/ʋɔdkɑ/|lang=nb}}
@@ -282,7 +297,7 @@ From {{etyl|ru|nb}} {{m|ru|водка}}.
 ==Norwegian Nynorsk==
 
 ===Etymology===
-From {{etyl|ru|nn}} {{m|ru|водка}}.
+{{bor|nn|ru|во́дка}}, diminutive of {{m|ru|вода́|t=water}}.
 
 ===Noun===
 {{head|nn|noun|g=m|definite singular|vodkaen}}
@@ -296,12 +311,12 @@ From {{etyl|ru|nn}} {{m|ru|водка}}.
 ==Slovak==
 
 ===Etymology===
-{{etyl|sla-pro|sk}}, equivalent to {{suffix|voda|ka|gloss1=water|lang=sk}} (diminutive suffix),
+From {{der|sk|sla-pro|-}}, equivalent to {{af|sk|voda|t1=water|-ka|pos2=diminutive suffix}},
 
 ===Noun===
 {{sk-noun|g=f|decl=žena}}
 
-# [[vodka#English|vodka]]
+# [[#English|vodka]]
 
 ====Derived terms====
 * {{l|sk|vodkový}}
