--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -14,6 +14,7 @@
 * Bengali: {{t|bn|রাশিয়ান সোভিয়েত ফেডারেটিভ সোশালিস্ট রিপাবলিক}}
 * Czech: {{t|cs|Ruská sovětská federativní socialistická republika|f}}
 * Finnish: {{t|fi|Venäjän Sosialistinen Federatiivinen Neuvostotasavalta}}
+* Georgian: {{t|ka|რუსეთის საბჭოთა ფედერაციული სოციალისტური რესპუბლიკა}}
 * German: {{t|de|Russische Sozialistische Föderative Sowjetrepublik|f}}
 {{trans-mid}}
 * Macedonian: {{t|mk|Руска Советска Федеративна Социјалистичка Република|f|tr=Rúska Sóvetska Federatívna Socijalístička Repúblika}}
