--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -919,5 +919,6 @@ This preposition causes the [[soft mutation]].
 * {{audio|Wo-at.ogg|Audio|lang=wo}}
 
 ===Noun===
+{{head|wo|noun}}
 
 # [[year]]
