--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {{m|fr|simple}}, from {{etyl|la|en}} {{m|la|simplex||simple, literally 'onefold', as opposed to duplex, twofold, double}}, from {{m|la|sim-||the same}} + {{m|la|plicare||to fold}}. See [[same]] and [[fold]]. Compare [[single]], [[singular]], [[simultaneous]], etc.
+From {{inh|en|enm|simple}}, from {{bor|en|fro|-|notext=1}} and {{bor|en|fr|simple|notext=1}}, from {{der|en|la|simplex|t=simple|lit=onefold}} (as opposed to {{m|la|duplex|lit=twofold|t=double}}, from {{m|la|sim-|t=the same}} + {{m|la|plicare|t=to fold}}. See [[same]] and [[fold]]. Compare [[single]], [[singular]], [[simultaneous]], etc.
 
 ===Pronunciation===
 * {{IPA|/ˈsɪmpəl/|lang=en}}
@@ -52,59 +52,7 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * {{sense|uncomplicated}} {{l|en|subtle}}
 
 ====Derived terms====
-{{der-top}}
-* {{l|en|fee simple}}
-* {{l|en|future simple}}
-* {{l|en|oversimple}}
-* {{l|en|past simple}}
-* {{l|en|plain and simple}}
-* {{l|en|present simple}}
-* {{l|en|pure and simple}}
-* {{l|en|simple beam}}
-* {{l|en|simple connectivity}}
-* {{l|en|simple contract}}
-* {{l|en|simple dislocation}}
-* {{l|en|simple equation}}
-* {{l|en|simple extension}}
-* {{l|en|simple eye}}
-* {{l|en|simple fraction}}
-* {{l|en|simple fracture}}
-* {{l|en|simple fruit}}
-* {{l|en|simple function}}
-* {{l|en|simple future}}
-* {{l|en|simple group}}
-* {{l|en|simple harmonic motion}}
-* {{l|en|simple-hearted}}
-* {{l|en|simple interest}}
-* {{l|en|simple leaf}}
-* {{l|en|simple linear regression}}
-{{der-mid}}
-* {{l|en|simple machine}}
-* {{l|en|simple mastectomy}}
-* {{l|en|simple microscope}}
-* {{l|en|simple-minded}}
-* {{l|en|simple past}}
-* {{l|en|simple pendulum}}
-* {{l|en|simple pistil}}
-* {{l|en|simple pole}}
-* {{l|en|simple present}}
-* {{l|en|simple protein}}
-* {{l|en|simple regression}}
-* {{l|en|simple sentence}}
-* {{l|en|Simple Simon}}
-* {{l|en|simple sugar}}
-* {{l|en|simple syrup}}
-* {{l|en|simple time}}
-* {{l|en|simple trust}}
-* {{l|en|simplehead}}
-* {{l|en|simpleness}}
-* {{l|en|simpless}}
-* {{l|en|simplex}}
-* {{l|en|simply}}
-* {{l|en|single}}
-* {{l|en|simplicity}}
-* {{l|en|simpleton}}
-{{der-bottom}}
+{{der4|fee simple|future simple|oversimple|past simple|plain and simple|present simple|pure and simple|simple beam|simple connectivity|simple contract|simple dislocation|simple equation|simple extension|simple eye|simple fraction|simple fracture|simple fruit|simple function|simple future|simple group|simple harmonic motion|simple-hearted|simple interest|simple leaf|simple linear regression|simple machine|simple mastectomy|simple microscope|simple-minded|simple past|simple pendulum|simple pistil|simple pole|simple present|simple protein|simple regression|simple sentence|Simple Simon|simple sugar|simple syrup|simple time|simple trust|simplehead|simpleness|simpless|simplex|simply|single|simplicity|simpleton|lang=en}}
 
 ====Translations====
 {{trans-top|uncomplicated}}
@@ -117,18 +65,18 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * Asturian: {{t+|ast|simple}}, {{t+|ast|cenciellu}}
 * Aymara: {{t-needed|ay}}
 * Azeri: {{t+|az|sadə}}, {{t+|az|bəsit}}
-* Bashkir: {{t|ba|ябай|sc=Cyrl}}
+* Bashkir: {{t|ba|ябай}}
 * Basque: {{t-needed|eu}}
-* Belarusian: {{t|be|про́сты|sc=Cyrl}}, {{t|be|лёгкі|sc=Cyrl}} {{qualifier|easy}}
-* Bengali: {{t|bn|সহজ|tr=sôhôj|sc=Beng}}
+* Belarusian: {{t|be|про́сты}}, {{t|be|лёгкі}} {{qualifier|easy}}
+* Bengali: {{t|bn|সহজ}}|tr=sôhôj
 * Breton: {{t-needed|br}}
-* Bulgarian: {{t+|bg|прост|m}}, {{t+|bg|ле́сен|sc=Cyrl}} {{qualifier|easy}}
-* Burmese: {{t+|my|ရိုး|sc=Mymr}}
+* Bulgarian: {{t+|bg|прост|m}}, {{t+|bg|ле́сен}} {{qualifier|easy}}
+* Burmese: {{t+|my|ရိုး}}
 * Catalan: {{t+|ca|simple}}, {{t+|ca|senzill}}
 * Cherokee: {{t-needed|chr}}
 * Chichewa: {{t-needed|ny}}
 * Chinese:
-*: Mandarin: {{t+|cmn|簡單|sc=Hani}}, {{t+|cmn|简单|tr=jiǎndān|sc=Hani}}, {{qualifier|easy}} {{t+|cmn|容易|tr=róngyì|sc=Hani}}, {{t+|cmn|簡易|sc=Hani}}, {{t+|cmn|简易|tr=jiǎnyì|sc=Hani}}
+*: Mandarin: {{t+|cmn|簡單}}, {{t+|cmn|简单|tr=jiǎndān}}, {{qualifier|easy}} {{t+|cmn|容易|tr=róngyì}}, {{t+|cmn|簡易}}, {{t+|cmn|简易|tr=jiǎnyì}}
 * Corsican: {{t-needed|co}}
 * Czech: {{t+|cs|jednoduchý|m}}, {{t+|cs|prostý}}, {{t+|cs|lehký}} {{qualifier|easy}}
 * Danish: {{t-needed|da}}
@@ -151,8 +99,8 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * Haitian Creole: {{t|ht|senp}}
 * Hausa: {{t-needed|ha}}
 * Hawaiian: {{t|haw|maʻalahi}}
-* Hebrew: {{t+|he|פשוט|tr=pashút|sc=Hebr}}
-* Hindi: {{t+|hi|सरल|tr=saral|sc=Deva}}, {{qualifier|easy}} {{t+|hi|आसान|tr=āsān|sc=Deva}}
+* Hebrew: {{t+|he|פשוט|tr=pashút}}
+* Hindi: {{t+|hi|सरल}}|tr=saral, {{qualifier|easy}} {{t+|hi|आसान}}|tr=āsān
 * Hungarian: {{t+|hu|egyszerű}}
 * Icelandic: {{t+|is|einfaldur|m}}
 * Ido: {{t+|io|simpla}}
@@ -162,15 +110,15 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * Interlingue: {{t|ie|simplic}}
 * Irish: {{t|ga|simplí}}
 * Italian: {{t+|it|semplice}}, {{t+|it|mero|m}}
-* Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui|sc=Jpan}}
+* Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui}}
 * Javanese: {{t-needed|jv}}
 * Kannada: {{t-needed|kn}}
-* Kazakh: {{t+|kk|қарапайым|sc=Cyrl}}, {{t+|kk|жеңіл|sc=Cyrl}} {{qualifier|easy}}
-* Khmer: {{t|km|មិនពិបាក|tr=mɨn pi’baak|sc=Khmr}}
+* Kazakh: {{t+|kk|қарапайым}}, {{t+|kk|жеңіл}} {{qualifier|easy}}
+* Khmer: {{t|km|មិនពិបាក|tr=mɨn pi’baak}}
 * Korean: {{t|ko|간단한|tr=gandan-han}} ({{t+|ko|簡單}} + {{t+|ko|한}}), {{qualifier|predicate}} {{t+|ko|간단하다|tr=gandan-hada}}
 * Kurdish:
-*: Sorani: {{t+|ku|ئاسان|tr=AsAn|sc=ku-Arab}}, {{t+|ku|ساکار|tr=sAkAr|sc=ku-Arab}}
-* Kyrgyz: {{t+|ky|жөнөкөй|sc=Cyrl}}, {{t+|ky|жеңил|sc=Cyrl}} {{qualifier|easy}}
+*: Sorani: {{t+|ku|ئاسان|tr=AsAn}}, {{t+|ku|ساکار|tr=sAkAr}}
+* Kyrgyz: {{t+|ky|жөнөкөй}}, {{t+|ky|жеңил}} {{qualifier|easy}}
 * Ladino: {{t|lad|kolay}}, {{t|lad|sempl}}, {{t|lad|sémpliche}}
 * Lao: {{t|lo|ງ່າຍ|sc=Laoo}}
 {{trans-mid}}
@@ -180,22 +128,22 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * Lojban: {{t|jbo|sampu}}
 * Luganda: {{t-needed|lg}}
 * Luxembourgish: {{t-needed|lb}}
-* Macedonian: {{t|mk|едно́ставен|sc=Cyrl}}, {{t|mk|прост|sc=Cyrl}}, {{t|mk|ле́сен|sc=Cyrl}} {{qualifier|easy}}
+* Macedonian: {{t|mk|едно́ставен}}, {{t|mk|прост}}, {{t|mk|ле́сен}} {{qualifier|easy}}
 * Malay: {{t|ms|mudah}}
 * Malayalam: {{t-needed|ml}}
 * Maltese: {{t|mt|sempliċi}}
 * Manx: {{t|gv|oney}}, {{t|gv|macaintagh}}, {{t|gv|neuchialgagh}}
-* Marathi: {{t|mr|सरळ|sc=Deva}}
+* Marathi: {{t|mr|सरळ}}
 * Mirandese: {{t|mwl|lhano}}
-* Mongolian: {{t+|mn|энгийн|sc=Cyrl}}
+* Mongolian: {{t+|mn|энгийн}}
 * Nepali: {{t-needed|ne}}
 * Norman: {{t|nrf|sîmpl'ye|m|f}}
 * Novial: {{t|nov|simpli}}
 * Occitan: {{t+|oc|simple}}
 * Old English: {{t-needed|ang}}
-* Oriya: {{t|or|ସରଳ|sc=Orya}}
+* Oriya: {{t|or|ସରଳ}}
 * Pashto: {{t-needed|ps}}
-* Persian: {{t+|fa|ساده|tr=sâde|sc=fa-Arab}}
+* Persian: {{t+|fa|ساده|tr=sâde}}
 * Polish: {{t+|pl|prosty|m}}, {{t+|pl|łatwy|m}}, {{t+|pl|lekki}} {{qualifier|easy}}
 * Portuguese: {{t+|pt|simples}}
 * Punjabi: {{t-needed|pa}}
@@ -206,7 +154,7 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * Scots: {{t-needed|sco}}
 * Scottish Gaelic: {{t|gd|sìmplidh}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|је̏дноста̄ван|sc=Cyrl}}, {{t|sh|лак}} {{qualifier|easy}}
+*: Cyrillic: {{t|sh|је̏дноста̄ван}}, {{t|sh|лак}} {{qualifier|easy}}
 *: Roman: {{t+|sh|jȅdnostāvan}}, {{t+|sh|lak}} {{qualifier|easy}}
 * Sicilian: {{t+|scn|sìmplici}}, {{t+|scn|sèmplici}}, {{t+|scn|sìmprici}}, {{t+|scn|sèmprici}}
 * Silesian: {{t|szl|ajnfachowy}}
@@ -217,15 +165,15 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * Somali: {{t-needed|so}}
 * Spanish: {{t+|es|simple}}, {{t+|es|sencillo}}
 * Swedish: {{t+|sv|enkel}}, {{t+|sv|simpel}}
-* Tajik: {{t+|tg|сода|sc=Cyrl}}
+* Tajik: {{t+|tg|сода}}
 * Tamil: {{t+|ta|எளிய}}, {{t+|ta|எளிது}}, {{t|ta|எளிமையான}}
-* Tatar: {{t|tt|гади|sc=Cyrl}}, {{t|tt|беркатлы|sc=Cyrl}}
-* Telugu: {{t+|te|సరళమైన|sc=Telu}}
+* Tatar: {{t|tt|гади}}, {{t|tt|беркатлы}}
+* Telugu: {{t+|te|సరళమైన}}
 * Thai: {{t+|th|ง่าย}}
 * Turkish: {{t+|tr|basit}}, {{t+|tr|sade}}
 * Turkmen: {{t|tk|sada}}, {{t|tk|ýönekeý}}
-* Ukrainian: {{t+|uk|про́стий|sc=Cyrl}}, {{t|uk|ле́гкий|sc=Cyrl}} {{qualifier|easy}}
-* Urdu: {{qualifier|easy}} {{t+|ur|آسان|tr=āsān|sc=ur-Arab}}
+* Ukrainian: {{t+|uk|про́стий}}, {{t|uk|ле́гкий}} {{qualifier|easy}}
+* Urdu: {{qualifier|easy}} {{t+|ur|آسان|tr=āsān}}
 * Uyghur: {{t-needed|ug}}
 * Uzbek: {{t+|uz|sodda}}, {{t+|uz|oson}} {{qualifier|easy}}
 * Vietnamese: {{t+|vi|giản dị}}, {{t+|vi|mộc mạc}}
@@ -253,8 +201,8 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * Irish: {{t|ga|saonta}}, {{t|ga|macánta}}, {{t|ga|gan chealg}}
 * Manx: {{t|gv|meecheeallagh}}, {{t|gv|neuchreeney}}, {{t|gv|giare-cheeayllagh}}
 {{trans-mid}}
-* Marathi: {{t|mr|भोळा|sc=Deva}}
-* Polish: {{t+|pl|prostak}} ''(noun)''
+* Marathi: {{t|mr|भोळा}}
+* Polish: {{t+|pl|prostak}} {{qual|noun}}
 * Portuguese: {{t+|pt|simples}}
 * Romanian: {{t+|ro|simplu}}
 * Russian: {{t+|ru|просто́й|m}}, {{t+|ru|простоду́шный|m}}
@@ -313,7 +261,7 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 ==Asturian==
 
 ===Etymology===
-Borrowed from {{etyl|la|ast}} {{m|la|simplex}}.
+{{bor|ast|la|simplex}}.
 
 ===Adjective===
 {{ast-adj-mf}}
@@ -328,7 +276,7 @@ Borrowed from {{etyl|la|ast}} {{m|la|simplex}}.
 ==Catalan==
 
 ===Etymology===
-Borrowed from {{etyl|la|ca}} {{m|la|simplex}}.
+{{bor|ca|la|simplex}}.
 
 ===Pronunciation===
 * {{ca-IPA}}
@@ -343,12 +291,12 @@ Borrowed from {{etyl|la|ca}} {{m|la|simplex}}.
 * {{l|ca|senzill}}
 
 ====Derived terms====
-* {{l|ca|fulla simple|gloss=simple leaf}}
-* {{l|ca|simplement|gloss=simply}}
+* {{l|ca|fulla simple|t=simple leaf}}
+* {{l|ca|simplement|t=simply}}
 
 ====Related terms====
-* {{l|ca|símplex|gloss=simplex}}
-* {{l|ca|simplicitat|gloss=simplicity}}
+* {{l|ca|símplex|t=simplex}}
+* {{l|ca|simplicitat|t=simplicity}}
 * {{l|ca|ximple}}
 
 ----
@@ -356,7 +304,7 @@ Borrowed from {{etyl|la|ca}} {{m|la|simplex}}.
 ==Esperanto==
 
 ===Etymology===
-{{suffix|simpla|e|lang=eo}}
+From {{af|eo|simpla|-e}}.
 
 ===Pronunciation===
 * {{IPA|/ˈsimple/|lang=eo}}
@@ -372,7 +320,7 @@ Borrowed from {{etyl|la|ca}} {{m|la|simplex}}.
 ==French==
 
 ===Etymology===
-From {{etyl|fro|fr}}, borrowed from {{etyl|la|fr}} {{m|la|simplex}}.
+From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex|notext=1}}.
 
 ===Pronunciation===
 * {{audio|Fr-simple.ogg|audio|lang=fr}}
@@ -382,14 +330,11 @@ From {{etyl|fro|fr}}, borrowed from {{etyl|la|fr}} {{m|la|simplex}}.
 {{fr-adj}}
 
 # {{l|en|simple}}
-#: ''Un homme simple''
-#:: ''A simple man''
+#: {{ux|fr|Un homme simple|A simple man}}
 # {{l|en|one-way}}
-#: ''Un billet simple''
-#:: ''A one-way ticket''
+#: {{ux|fr|Un billet simple|A one-way ticket}}
 # {{l|en|mere}}
-#: ''Un simple soldat''
-#:: ''A mere soldier''
+#: {{ux|fr|Un simple soldat|A mere soldier}}
 
 ====Usage notes====
 The first and second meanings are taken when the adjective is placed after the noun. The third meaning is taken when it is located before the noun.
@@ -401,10 +346,7 @@ The first and second meanings are taken when the adjective is placed after the n
 # {{lb|fr|baseball}} [[single#Noun|single]]
 
 ====Related terms====
-* {{l|fr|aller simple}}
-* {{l|fr|simplement}}
-* {{l|fr|simplicité}}
-* {{l|fr|simplifier}}
+{{rel4|aller simple|simplement|simplicité|simplifier|lang=fr}}
 
 ===Anagrams===
 * {{l|fr|emplis}}
@@ -417,7 +359,7 @@ The first and second meanings are taken when the adjective is placed after the n
 ==Galician==
 
 ===Etymology===
-Borrowed from {{etyl|la|gl}} {{m|la|simplex}}.Displaced {{etyl|roa-opt|gl}} {{m|roa-opt|simplez}}
+{{bor|gl|la|simplex}}. Displaced {{cog|roa-opt|simplez}}.
 
 ===Adjective===
 {{gl-adj|f=simple}}
@@ -440,8 +382,8 @@ Borrowed from {{etyl|la|gl}} {{m|la|simplex}}.Displaced {{etyl|roa-opt|gl}} {{m|
 ===Adjective===
 {{nb-adj-form}}
 
-# {{definite of|simpel|lang=nb}}
-# {{form of|plural form|simpel|lang=nb}}
+# {{inflection of|simpel||def|s|lang=nb}}
+# {{inflection of|simpel||p|lang=nb}}
 
 ----
 
@@ -450,8 +392,8 @@ Borrowed from {{etyl|la|gl}} {{m|la|simplex}}.Displaced {{etyl|roa-opt|gl}} {{m|
 ===Adjective===
 {{nn-adj-form}}
 
-# {{definite of|simpel|lang=nn}}
-# {{form of|plural form|simpel|lang=nn}}
+# {{inflection of|simpel||def|s|lang=nn}}
+# {{inflection of|simpel||p|lang=nn}}
 
 ----
 
@@ -461,7 +403,7 @@ Borrowed from {{etyl|la|gl}} {{m|la|simplex}}.Displaced {{etyl|roa-opt|gl}} {{m|
 * {{l|fro|sinple}}
 
 ===Etymology===
-Borrowed from {{etyl|la|fro}} {{m|la|simplex}}.
+{{bor|fro|la|simplex}}.
 
 ===Adjective===
 {{fro-adj|mf}}
@@ -492,7 +434,7 @@ Borrowed from {{etyl|la|fro}} {{m|la|simplex}}.
 ==Spanish==
 
 ===Etymology===
-Borrowed from {{etyl|la|es}} {{m|la|simplex}}.
+{{bor|es|la|simplex}}.
 
 ===Adjective===
 {{es-adj}}
