--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -57,6 +57,9 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 #*: We '''bind''' the variable <code>n</code> to the value <code>2</code>, and <code>xs</code> to <code>"abcd"</code>.
 #* '''2009''', Robert Pickering, ''Beginning F#'' (page 123)
 #*: You can '''bind''' an identifier to an object of a derived type, as you did earlier when you bound a string to an identifier of type <code>obj</code>{{...}}
+# {{lb|en|UK|dialect}} To [[complain]]; to [[whine]] about something.
+#* '''1980''', Iris Murdoch, ''Nuns And Soldiers''
+#*: "But it's not much good piling up the pix if I can't sell them."<br>"Oh do stop '''binding'''. Think of something. How will we eat, where will we sleep?"
 
 ====Synonyms====
 * {{sense|''transitive'' tie or fasten together}} {{l|en|fetter}}, {{l|en|make fast}}, {{l|en|tie}}, {{l|en|fasten}}, {{l|en|restrain}}
