t+lb:[[einfach]] t+lb:[[liicht]] ([[WT:EDIT|Assisted]]) <simple#47139779>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -127,7 +127,7 @@ From {{inh|en|enm|simple}}, from {{bor|en|fro|-|notext=1}} and {{bor|en|fr|simpl
 * Lithuanian: {{t+|lt|paprastas}}
 * Lojban: {{t|jbo|sampu}}
 * Luganda: {{t-needed|lg}}
-* Luxembourgish: {{t-needed|lb}}
+* Luxembourgish: {{t|lb|einfach}}, {{t|lb|liicht}}
 * Macedonian: {{t|mk|едно́ставен}}, {{t|mk|прост}}, {{t|mk|ле́сен}} {{qualifier|easy}}
 * Malay: {{t|ms|mudah}}
 * Malayalam: {{t-needed|ml}}
