--- a/en/w/wah lau.720445.wikitext
+++ b/en/w/wah lau.720445.wikitext
@@ -9,7 +9,7 @@
 From {{etyl|nan-teo|en}} and {{etyl|nan-hok|en}}. Ultimate origin uncertain: first element equivalent to {{etyl|nan-hok|en}} {{zh-l|[[我]]|tr=góa|my}} + ''lau'', possibly from {{zh-l|[[老爸]]|tr=lāu-pē|father}}. Originating in the 1990s.
 
 ===Interjection===
-'''[[wah]] [[lau]]'''
+{{en-interj}}
 
 # {{lb|en|Singapore|informal}} [[oh no|Oh no]]!
 
