not unc <dawn of a new day#47154817>

--- a/en/d/dawn of a new day.855454.wikitext
+++ b/en/d/dawn of a new day.855454.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|?}}
 
 # {{lb|en|idiomatic}} A new [[beginning]]; a [[fresh]] [[start]]; an [[important]], [[promising]] [[turning point]].
 #* '''1881''', [[w:Georg_Ebers|Georg Ebers]], ''The Emperor (Der Kaiser)'' trans. Clara Bell, ch. 15,
