--- a/en/s/socialized medicine.803564.wikitext
+++ b/en/s/socialized medicine.803564.wikitext
@@ -3,5 +3,8 @@
 
 ===Noun===
 {{en-noun|-}}
-# An [[umbrella term]] for any system of [[government]]-run [[health care]].
-# {{lb|en|US|politics|idiomatic}} A politically charged term used to contrast such systems with [[free market]] alternatives and emphasize the perceived link to [[socialism]].
+
+# Any system of [[government]]-run [[health care]].
+
+====Usage notes====
+* In US politics, this is a politically charged term used to contrast such systems with [[free market]] alternatives and to emphasize the perceived link to [[socialism]].
