t+gu:[[ટાપુ]] ([[WT:EDIT|Assisted]]) <island#47164530>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -124,7 +124,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Greek: {{qualifier|formal}} {{t+|el|νήσος|f}}, {{t+|el|νησί|n}}
 *: Ancient: {{t|grc|νῆσος|f}}
 * Guaraní: {{t|gn|ypa'ũ}}
-* Gujarati: {{t|gu|દ્વીપ|m|tr=dvīp|sc=Gujr}}
+* Gujarati: {{t|gu|દ્વીપ|m|tr=dvīp|sc=Gujr}}, {{t+|gu|ટાપુ}}
 * Haitian Creole: {{t|ht|zile}}, {{t|ht|zil}}
 * Hausa: {{t|ha|tsibiri}}
 * Hawaiian: {{t|haw|moku}}
