--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -213,3 +213,4 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 * {{anagrams|en|Tar Heel|Tarheel|haltere|lethera}}
 
 [[Category:en:Hides]]
+[[Category:en:Leatherworking]]
