t+sv:[[se där]] t+sv:[[jaha]] t+sv:[[jaså]] ([[WT:EDIT|Assisted]]) <no kidding#47184209>

--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -23,4 +23,5 @@
 * Portuguese: {{t|pt|não brinca}}
 * Russian: {{t+|ru|неуже́ли?}}
 * Spanish: {{t+|es|no me digas}}
+* Swedish: {{t+|sv|se där}}, {{t+|sv|jaha}}, {{t+|sv|jaså}}
 {{trans-bottom}}
