--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -9,6 +9,7 @@
 
 ====See also====
 * {{l|en|apocalypse}}
+* {{l|en|apocatastasis}}
 * {{l|en|armageddon}}
 * {{l|en|day of reckoning}}
 * {{l|en|judgment day}}
