--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -12,7 +12,7 @@
 ===Noun===
 {{gl-noun|mf}}
 
-# [[United American]]
+# [[US American]]
 
 ===See also===
 * {{l|gl|americano}}
@@ -32,12 +32,12 @@
 * {{IPA|/eˌsta.ðou.niˈðen.se/|/eˌsta.ðow.niˈðen.se/|lang=es}}
 
 ===Alternative forms===
-* {{lEstado Unidense}} Spain and Latin America}}
+* {{l|es|estadunidense}} {{qualifier|Honduras|Mexico}}
 
 ===Noun===
 {{es-noun|mf}}
 
-# citizen of the [[United States]] of America; [[United American]]
+# citizen of the [[United States]] of America; [[American]]
 
 ===Adjective===
 {{es-adj|f=estadounidense|pl=estadounidenses}}
