--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -1,7 +1,7 @@
 {{also|genêt}}
 ==English==
 {{was wotd|2012|January|8}}
-[[File:Genetta genetta felina (Wroclaw zoo).JPG|thumb|right|Common genet, ''Genetta genetta'']]
+[[File:Genetta genetta felina (Wroclaw zoo).JPG|thumb|right|Common '''genet''', ''Genetta genetta''.]]
 {{wikipedia|dab=genet}}
 {{wikispecies|Genetta}}
 
