--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -127,6 +127,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Turkmen: {{t+|tk|arak}}, {{t|tk|wodka}}
 * Ukrainian: {{t|uk|горі́лка|f}}, {{t|uk|во́дка|f}}
 * Urdu: {{t|ur|وودکا|f|tr=vodkā}}, {{t|ur|ووڈکا|f|tr=voḍkā}}
+* Uyghur: {{t|ug|ۋوتكا}}
 * Uzbek: {{t+|uz|aroq}}, {{t|uz|vodka}}
 * Vietnamese: {{t+|vi|vodka}}, {{t|vi|vôtca}}, {{t|vi|rượu vôtca}}, {{t|vi|rượu vodka}}
 * Vilamovian: {{t|wym|branfȧjn|m}}
