--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -211,6 +211,6 @@ From {{der|ms|sa|मेघ|t=cloud}}.
 ==Sundanese==
 
 ===Noun===
-{{head|ms|noun|Sundanese spelling|ᮙᮦᮌ}}
+{{head|su|noun|Sundanese spelling|ᮙᮦᮌ}}
 
 # [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
