t+kw:[[enys]] ([[WT:EDIT|Assisted]]) <island#47228903>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -95,6 +95,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Coptic:
 *: Bohairic: {{t|cop|ⲙⲟⲩⲓ|f}}, {{t|cop|ⲛⲏⲥⲟⲥ|f}}
 *: Sahidic: {{t|cop|ⲙⲟⲩⲉ|f}}, {{t|cop|ⲛⲏⲥⲟⲥ|f}}
+* Cornish: {{t|kw|enys}}
 * Corsican: {{t+|co|isula|f}}
 * Cree: {{t|cr|ᒥᓂᔥᑎᒄ|tr=minishtikw}}
 * Crimean Tatar: {{t|crh|ada}}
