--- a/en/v/virtual darkness.803315.wikitext
+++ b/en/v/virtual darkness.803315.wikitext
@@ -10,7 +10,7 @@
 #*: The term scotic (Gr. skotos, darkness) was therefore devised as the most apt term for the condition of '''virtual darkness'''.
 #* '''2002''', George Schaub, ''Using Your Camera: A Basic Guide to 35Mm Photography'', page 110
 #*: With a high-tech assist beam, you can shoot in '''virtual darkness''', although a more practical use is for working in dim rooms and on streets at night.
-#* '''2007''', Phelps J., Dark therapy for bipolar disorder using amber lenses for blue light blockade. ''Medical Hypotheses'', July 14, 2007, [Epub ahead of print] PMID 17637502
+#* '''2007''', Phelps J., Dark therapy for bipolar disorder using amber lenses for blue light blockade. ''Medical Hypotheses'', July 14, 2007, [Epub ahead of print] [[pmid:17637502]]
 #*: "'''[V]irtual darkness'''" may be achievable by blocking blue wavelengths of light. […]. Therefore it may be possible to influence human [[circadian rhythm]]s by using these lenses at night to blunt the impact of electrical light, particularly the blue light of ubiquitous television screens, by creating a "[[virtual darkness]]".
 
 ===See also===
