t+th:[[แบดเจอร์]] t-balance t+my:[[ခွေးတူဝက်တူ]] t+uz:[[boʻrsiq]] t+ky:[[кашкулак]] t+tg:[[қашқалдоқ]] t+hi:[[बिज्जू]] t+tk:[[torsuk]] t+tl:[[badyer]] t+vi:[[lửng]] ([[WT:EDIT|Assist... <badger#47246525>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -45,6 +45,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Belarusian: {{t|be|барсу́к|m}}
 * Breton: {{t+|br|broc'h|m}}
 * Bulgarian: {{t+|bg|я́зовец|m}}
+* Burmese: {{t+|my|ခွေးတူဝက်တူ}}
 * Catalan: {{t|ca|teixó|m}}
 * Chechen: {{t|ce|дIама}}
 * Cherokee: {{t|chr|ᎢᏃᎵ}}
@@ -68,6 +69,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Gothic: {{t|got|𐌸𐌰𐌷𐍃𐌿𐍃|m}}
 * Greek: {{t+|el|ασβός|m}}
 * Hebrew: {{t+|he|גִּירִית|f|tr=girit}}
+* Hindi: {{t+|hi|बिज्जू|m}}
 * Hungarian: {{t+|hu|borz}}
 * Icelandic: {{t|is|greifingi|m}}
 * Ido: {{t+|io|daxo}}
@@ -81,15 +83,16 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Kumyk: {{t|kum|порсукъ|tr=porsuq}}
 * Kurdish:
 *: Kurmanji: {{t+|kmr|kurbeşk}}
+* Kyrgyz: {{t|ky|кашкулак}}
 * Ladin: {{t|lld|tas|?}}
 * Lakota: {{t|lkt|ȟoká}}
 * Latin: {{t|la|mēles|f}}
 * Latvian: {{t+|lv|āpsis|m}}
 * Lithuanian: {{t+|lt|barsukas|m}}, {{t|lt|opšrus|?}}
-{{trans-mid}}
 * Low German:
 *: Dutch Low Saxon: {{t-needed|nds-nl}}
 *: German Low German: {{t|nds-de|Tacks|m}}, {{t|nds-de|Daks}}
+{{trans-mid}}
 * Macedonian: {{t|mk|ја́зовец|m}}
 * Malay: {{t|ms|bejar}}
 * Manx: {{t|gv|broc|m}}
@@ -126,14 +129,18 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Spanish: {{t+|es|tejón|m}}
 * Swahili: {{t|sw|melesi}}
 * Swedish: {{t+|sv|grävling|c}}
-* Tagalog: {{t|tl|tasugo}}
+* Tagalog: {{t|tl|tasugo}}, {{t|tl|badyer}}
+* Tajik: {{t|tg|қашқалдоқ}}
 * Taos: {{t|twf|kòlno’óna}}
 * Tatar: {{t+|tt|бурсык}}
+* Thai: {{t|th|แบดเจอร์}}
 * Turkish: {{t+|tr|porsuk}}
+* Turkmen: {{t|tk|torsuk}}
 * Tuvan: {{t|tyv|морзук}}
 * Ukrainian: {{t+|uk|борсу́к|m}}
 * Uyghur: {{t|ug|بورسۇق}}
-* Vietnamese: {{t|vi|con lửng}}
+* Uzbek: {{t+|uz|boʻrsiq}}
+* Vietnamese: {{t|vi|con lửng}}, {{t+|vi|lửng}}
 * Volapük: {{t+|vo|daf}}
 * Welsh: {{t+|cy|moch daear|m-p}}, {{t+|cy|broch|m}}, {{t+|cy|daearfoch|m-p}}
 * West Frisian: {{t+|fy|das|c}}
