--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -12,5 +12,6 @@
 {{trans-top|At the limit of one’s patience}}
 * French: {{t+|fr|au bout du rouleau}}
 {{trans-mid}}
+* Korean: {{t|ko|진퇴양난에 빠진}}
 * Scottish Gaelic: {{t|gd|aig an dùbhlan le}}
 {{trans-bottom}}
