t+lb:[[Gewiicht]] t+lb:[[Bedeitung]] t-balance t+lb:[[Stäerkt]] ([[WT:EDIT|Assisted]]) <weight#47248367>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -135,6 +135,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 * Lao: {{t|lo|ນ້ຳໜັກ|sc=Laoo}}
 * Latvian: {{t|lv|svars|m}}
 * Lithuanian: {{t+|lt|svoris|m}}
+* Luxembourgish: {{t|lb|Gewiicht|n}}
 * Macedonian: {{t|mk|тежина|f|sc=Cyrl}}
 * Malay: {{t|ms|berat}}
 * Maori: {{t-needed|mi}}
@@ -191,6 +192,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重り|tr=omori}}
 * Latvian: {{t|lv|svars|m}}, {{t|lv|atsvars|m}}
+* Luxembourgish: {{t|lb|Gewiicht|n}}
 * Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
@@ -227,6 +229,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 {{trans-top|importance or influence}}
 * Finnish: {{t+|fi|painoarvo}}, {{t+|fi|merkitys}}
 * Latin: {{t|la|auctōritās|f}}
+* Luxembourgish: {{t|lb|Bedeitung|f}}, {{t|lb|Gewiicht|n}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|peso|m}}
 * Romanian: {{t+|ro|greutate|f}}
@@ -276,6 +279,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 
 {{trans-top|typography: boldness of a font}}
 * Finnish: {{t+|fi|paksuus}}
+* Luxembourgish: {{t|lb|Stäerkt|f}}
 {{trans-mid}}
 * Swedish: {{t+|sv|vikt|c}}
 {{trans-bottom}}
