--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -1,5 +1,5 @@
 ==English==
-[[Image:Cauliflower.jpg|thumb|right|200px|A budding cauliflower plant.]]
+[[Image:Cauliflower.jpg|thumb|right|200px|A budding '''cauliflower''' plant.]]
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈkɒl.i.flaʊ.ə/|/ˈkɒl.ɪ.flaʊ.ə/|lang=en}}
@@ -35,7 +35,7 @@ From 16th century {{m|en|cole-florye}}. Compare Latin {{m|la|caulis}}, French {{
 * Burmese: {{t+|my|ဂေါ်ဖီပန်း|sc=Mymr}}
 * Catalan: {{t|ca|coliflor|f}}, {{t|ca|bròquil blanc|m}}
 * Chinese:
-*: Cantonese: {{t|yue|椰花菜|tr=je4 coi3 faa1|sc=Hani}}
+*: Cantonese: {{t|yue|椰花菜|tr=je⁴coi³faa¹|sc=Hani}}
 *: Mandarin: {{t+|cmn|花椰菜|tr=huāyēcài|sc=Hani}}, {{t+|cmn|菜花|tr=càihuā|sc=Hani}}, {{t+|cmn|花菜|tr=huācài}}
 * Czech: {{t+|cs|květák|m}}, {{t|cs|karfiól|m}}
 * Danish: {{t+|da|blomkål}}
