--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -16,10 +16,10 @@ From {{etyl|fro|en}} {{m|fro|quadrat||a square}}, from {{etyl|la|en}} {{m|la|qua
 #*: The number of Ten hath been as highly extolled, as containing even, odd, long, plain, '''quadrate''' and cubical numbers.
 # {{lb|en|archaic}} Square; even; balanced; equal; exact.
 #* Howell
-#*: A '''quadrate''', solid, wise man.
+#*: a '''quadrate''', solid, wise man
 # {{lb|en|archaic}} Squared; suited; correspondent.
 #* Harvey
-#*: A generical description '''quadrate''' to both.
+#*: a generical description '''quadrate''' to both
 
 ===Noun===
 {{en-noun}}
