--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -7,16 +7,16 @@
 * {{rhymes|ɛt|lang=en}}
 
 ===Etymology 1===
-From 16th century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bætan||to make better}}.
+From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bætan||to make better}}.
 
 ====Noun====
 {{en-noun}}
 
 # {{senseid|en|wager}} A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event).
-#: ''Dylan owes Fletcher $30 from an unsuccessful '''bet.'''''
+#: ''Dylan owes Fletcher $30 from an unsuccessful '''bet'''.''
 # A degree of [[certainty]].
 #: ''It’s a safe '''bet''' that it will rain tomorrow.''
-#: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow''
+#: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow.''
 
 =====Translations=====
 {{trans-top|a wager}}
