--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -34,7 +34,7 @@ From {{m|en|bend}}.
 # {{lb|en|slang|football}} [[inaccurate]] at [[shooting]]
 #: ''That shot was so '''bent''' it left the pitch.''
 # {{lb|en|colloquial|chiefly|US}} Suffering from [[the bends]]
-# {{lb|en|slang}} [[high|High]] from using both [[Cannabis|marijuana]] and [[alcohol]].
+# {{lb|en|slang}} [[high|High]] from both [[marijuana]] and [[alcohol]].
 #: ''Man, I am so '''bent''' right now!''
 
 =====Synonyms=====
