--- a/en/r/reallocation.741523.wikitext
+++ b/en/r/reallocation.741523.wikitext
@@ -1,8 +1,12 @@
 {{also|réallocation}}
 ==English==
 
+===Etymology===
+{{prefix|en|re|allocation}}
+
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
+
 # The act of [[reallocate|reallocating]]; a second or subsequent [[allocation]].
 
 ===Anagrams===
