--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -120,8 +120,9 @@ The verb comes from the supposed cunningness of the weasel.
 * German: {{t+|de|Wiesel|n}}
 * Hungarian: {{t+|hu|menyét}}
 * Indonesian: {{t+|id|cerpelai}}
-* Maori: {{t|mi|wītara}}, {{t|mi|wīhara}}, {{t|mi|tori uaroa}}
+* Latvian: {{t|lv|sermulis|m}}
 {{trans-mid}}
+* Maori: {{t|mi|wītara}}, {{t|mi|wīhara}}, {{t|mi|tori uaroa}}
 * Navajo: {{t|nv|dlǫ́ʼii}}
 * Portuguese: {{t+|pt|doninha|f}}
 * Scottish Gaelic: {{t|gd|neas|f}}
