--- a/en/l/labourious.803568.wikitext
+++ b/en/l/labourious.803568.wikitext
@@ -3,4 +3,4 @@
 ===Adjective===
 {{head|en|adjective}}
 
-# {{lb|en|nonstandard}} {{alternative form of|from=UK|laborious|lang=en}}
+# {{alternative form of|from=UK|laborious|lang=en}}
