t+za:[[faexcuk]] t+za:[[faexndoek]] ([[WT:EDIT|Assisted]]) <bamboo#47267459>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -117,7 +117,7 @@
 * Volapük: {{t+|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
 * Waray-Waray: {{t|war|kawayan}}
 * Welsh: {{t|cy|bambŵ|m}}
-* Zhuang: {{t-needed|za}}
+* Zhuang: {{t|za|faexcuk}}, {{t|za|faexndoek}}
 {{trans-bottom}}
 
 {{trans-top|wood}}
