--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -301,6 +301,18 @@ From {{inh|en|enm|simple}}, from {{bor|en|fro|-|notext=1}} and {{bor|en|fr|simpl
 
 ----
 
+==Chavacano==
+
+===Etymology===
+From {{etyl|es|cbk}} {{m|es|simple||simple}}.
+
+===Adjective===
+{{head|cbk|adjective}}
+
+# [[simple]]
+
+----
+
 ==Esperanto==
 
 ===Etymology===
@@ -365,6 +377,16 @@ The first and second meanings are taken when the adjective is placed after the n
 {{gl-adj|f=simple}}
 
 # {{l|en|simple}}
+
+----
+
+==German==
+
+===Adjective===
+{{head|de|adjective form}}
+
+# {{inflected form of|simpel|lang=de}}
+{{rfc-auto}}
 
 ----
 
@@ -462,12 +484,3 @@ The first and second meanings are taken when the adjective is placed after the n
 {{head|sv|adjective form}}
 
 # {{sv-adj-form-abs-def-m|simpel}}
-
-----
-==German==
-
-===Adjective===
-{{head|de|adjective form}}
-
-# {{inflected form of|simpel|lang=de}}
-{{rfc-auto}}
