--- a/en/r/ramming.802677.wikitext
+++ b/en/r/ramming.802677.wikitext
@@ -8,6 +8,8 @@
 ===Noun===
 {{en-noun}}
 
-# An [[intentional]] [[collision]], where something is rammed.
+# A [[collision]], where something is rammed.
+#* '''1896''', https://books.google.ca/books?id=KxBLAAAAYAAJ&pg=PA107&lpg=PA107 Proceedings of the United States Naval Institute page 107]
+#*:In the case of accidental '''ramming''' the conditions are different on the side of the rammer as well as on that of the [[rammee]]. Mr. Forster tells us that, in the case of accidental '''ramming''', it is an unusual thing for the rammer
 #* '''2000''', Patrick G. Coy, Lynne M. Woehrle, ''Social Conflicts and Collective Identities''
 #*: {{...}} extensive damage done to Royal Navy frigates by '''rammings''' by Iceland Coast Guard.
