--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -287,6 +287,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Ukrainian: {{t|uk|свисті́ти|impf|sc=Cyrl}}, {{t|uk|сюрча́ти|impf|sc=Cyrl}}
 * Vietnamese: {{t+|vi|huýt}}, {{t|vi|huýt sáo}}, {{t+|vi|huýt gió}}
 * Vilamovian: {{t|wym|wyspułn}}
+* Westrobothnian: {{t|gmq-bot|blistär}}
 {{trans-bottom}}
 
 {{trans-top|to move is such a way as to make a whistling sound}}
