--- a/en/i/interbank.742378.wikitext
+++ b/en/i/interbank.742378.wikitext
@@ -6,7 +6,7 @@ From {{prefix|inter|bank|lang=en}}.
 ===Adjective===
 {{en-adj|-}}
 
-# Of, pertaining to, or taking place between two or more [[bank]]s
+# Of, pertaining to, or taking place between two or more [[bank]]s (financial institutions).
 
 ====Translations====
 {{trans-top|of, pertaining to, or taking place between two or more banks}}
