--- a/en/e/EKG.26212.wikitext
+++ b/en/e/EKG.26212.wikitext
@@ -4,7 +4,7 @@
 Initialism of {{etyl|de|en}} {{m|de|Elektrokardiogramm|'''E'''lektro'''k'''ardio'''g'''ramm}}.
 
 ===Noun===
-{{head|en|noun}}
+{{en-noun|?}}
 
 # {{lb|en|cardiology}} [[electrocardiogram]]
 
