also ===Noun=== {{en-noun}}  # A collection of material packaged into a [[bale]]. #: ''fibre '''balings''''' <baling#47305426>

--- a/en/b/baling.855676.wikitext
+++ b/en/b/baling.855676.wikitext
@@ -9,6 +9,12 @@
 
 # {{present participle of|bale|lang=en|nocat=1}}
 
+===Noun===
+{{en-noun}}
+
+# A collection of material packaged into a [[bale]].
+#: ''fibre '''balings'''''
+
 ===Anagrams===
 * {{anagrams|en|abling}}
 
