t+ar:[[قمار]] t+acw:[[قمار]] ([[WT:EDIT|Assisted]]) <gamble#47305662>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -21,6 +21,8 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 
 ====Translations====
 {{trans-top|a risk undertaken with a potential gain}}
+* Arabic: {{t|ar|قِمَار|m}}
+*: Hijazi Arabic: {{t|acw|قُمار|m|tr=gumār}}
 * Bulgarian: {{t+|bg|риск|m|sc=Cyrl}}
 * Dutch: {{t+|nl|gok|m}}
 * Estonian: {{t|et|õnnemäng}}
