--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -197,7 +197,7 @@ From {{etyl|la|es}} {{m|la|mundus||world}}.
 ==Tagalog==
 
 ===Etymology===
-From {{etyl|es|tl}} {{m|es|mundo||world}}.
+Borrowed from {{bor|tl|es|mundo||world|notext=1}}.
 
 ===Noun===
 {{tl-noun|mundó}}
