unrecognized parameter in [[T:ja-usex]] <月#47319889>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -185,7 +185,7 @@ From {{attention|ja|Old Japanese?}} either {{ja-r|次ぎ|つぎ|next}} or {{ja-r
 #: {{ja-usex|日%本では'''月'''にうさぎが住んでいるというお話があります。|に%ほん で は '''つき''' に うさぎ が すんで いる と いう お-はなし が あります。|In Japan, there is a fairy-tale that rabbits live on the '''moon'''.}}
 #: {{ja-usex|'''月'''は地%球の唯一の衛%星です。|'''つき''' は ち%きゅう の ゆい.いつ の えい%せい です。|The '''moon''' is the only one [[satellite]] of the [[Earth]].}}
 # the [[lunar]] [[cycle]], a [[month]]
-#: {{ja-usex|'''月'''に一%度、旅%行に出かけます。|'''つき''' に いち%ど、 りょ%こう に でかけます。|I go for a trip once a '''month'''.|lang=ja}}
+#: {{ja-usex|'''月'''に一%度、旅%行に出かけます。|'''つき''' に いち%ど、 りょ%こう に でかけます。|I go for a trip once a '''month'''.}}
 # {{lb|ja|tarot}}: The [[moon|Moon]]; the eighteenth [[trump]] or [[major arcana]] [[card]] in most traditional Tarot decks.
 
 ====Synonyms====
