--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -28,7 +28,7 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 
 ====Translations====
 {{trans-top|in the capacity of}}
-* Danish: {{t+|da|qua}}, {{t|da|i egenskab af}}, {{t|da|eks. han førte ordet qua formand}}
+* Danish: {{t+|da|qua}}, {{t|da|i egenskab af}}
 * Dutch: [[qua#Dutch|qua]], {{t|nl|als zodanig}}, {{t|nl|wat betreft}}
 * French: {{t+|fr|en tant que}}
 {{trans-mid}}
