--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -7,6 +7,15 @@
 {{en-proper noun}}
 
 # A [[Kartvelian]] [[language]] of Turkey and Caucasian [[Georgia]], related to [[Georgian]], [[Mingrelian]], and [[Svan]].
+# The ethnic group speaking Laz and live mostly in [[Turkey]] and Georgia.
+
+====Related terms====
+* [[Lazi]]
+* [[Lazica]]
+* [[Lazican]]
+* [[Lazic]]
+* [[Lazia]]
+* [[Lazistan]]
 
 ====Translations====
 {{trans-top|language}}
