--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -1,10 +1,13 @@
 ==English==
 
+===Etymology===
+{{suffix|en|metallurgy|ist}}
+
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|dated}} A person who works in [[metal]]
-# A person skilled in [[metallurgy]]
+# {{lb|en|dated}} A person who works in [[metal]].
+# A person skilled in [[metallurgy]].
 
 ====Translations====
 {{trans-top|person skilled in metallurgy}}
