t+ab:[[Приднестровиа]] ([[WT:EDIT|Assisted]]) <Transnistria#47355742>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -18,7 +18,7 @@ From {{bor|en|ro|Transnistria|notext=1}}, from {{der|en|la|trans-}} + {{der|en|r
 
 ====Translations====
 {{trans-top|Transnistria, an autonomous territory in Moldova}}
-* Abkhaz: {{t-needed|ab}}
+* Abkhaz: {{t|ab|Приднестровиа}}
 * Arabic: {{t|ar|تْرَانْسْنِيسْتْرِيَا|f|tr=transnistriyā}}
 * Armenian: {{t|hy|Մերձդնեստր}}
 * Asturian: {{t|ast|Transnistria|f}}
