--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -325,7 +325,7 @@
 ==French==
 
 ===Etymology===
-From {{inh|fr|fro|-}}, a {{bor|fr|la|divisio|divisio, divisionem|nocap=1}}, noun of process form from perfect passive participle {{m|la|divisus||divided}}, from {{m|la|dīvidō||divide}}
+From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|divisio|divisio, divisionem|notext=1}}, noun of process form from perfect passive participle {{m|la|divisus||divided}}, from {{m|la|dīvidō||divide}}
 
 ===Pronunciation===
 * {{fr-IPA}}
