t+pl:[[zwiewać]] t+pl:[[zwiać]] ([[WT:EDIT|Assisted]]) <blow#47374248>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -418,6 +418,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * French: {{t+|fr|se casser}}, se {{t+|fr|tirer}}, [[mettre]] les {{t+|fr|voiles}}
 * Korean: {{t+|ko|그만두다}}
 {{trans-mid}}
+* Polish: {{t|pl|zwiewać|impf}}, {{t+|pl|zwiać|pf}}
 * Portuguese: {{t+|pt|vazar}}, {{t+|pt|sair}}
 * Spanish: {{t+|es|ir}}, {{t+|es|largar}}
 * Swahili: {{t+|sw|panchi}}
