t+cmn:[[幾個]] t+cmn:[[几个]] t+cmn:[[一些]] t+cmn:[[若干]] t+pt:[[{{t-needed}}]] t-balance t+da:[[{{t-needed}}]] t+uk:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <a number of#47376333>

--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -15,18 +15,24 @@
 ====Translations====
 {{trans-top|several}}
 * Chinese:
-*: Mandarin: {{t-needed|cmn}}
+*: Mandarin: {{t+|cmn|幾個}}, {{t+|cmn|几个|tr=jǐgè}}, {{t+|cmn|一些|tr=yīxiē}}, {{t+|cmn|若干|tr=ruògān}}
+* Danish: {{t-needed|da}}
 * Finnish: {{t+|fi|moni}}
 {{trans-mid}}
+* Portuguese: {{t-needed|pt}}
 * Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
 * Spanish: {{t-needed|es}}
+* Ukrainian: {{t-needed|uk}}
 {{trans-bottom}}
 
 {{trans-top|several of}}
 * Chinese:
-*: Mandarin: {{t-needed|cmn}}
+*: Mandarin: {{t+|cmn|幾個}}, {{t+|cmn|几个|tr=jǐgè}}, {{t+|cmn|一些|tr=yīxiē}}, {{t+|cmn|若干|tr=ruògān}}
+* Danish: {{t-needed|da}}
 * Finnish: {{t+|fi|moni}}
 {{trans-mid}}
+* Portuguese: {{t-needed|pt}}
 * Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
 * Spanish: {{t-needed|es}}
+* Ukrainian: {{t-needed|uk}}
 {{trans-bottom}}
