/* Derived terms */ bookstaff <staff#47406874>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -54,6 +54,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 
 ====Derived terms====
 {{der2|lang=en
+|bookstaff
 |centurion's staff
 |general staff
 |ground staff
