/* Noun */ + # [[cross-dresser]] <CD#47412560>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -58,6 +58,7 @@ Abbreviation of various terms and phrases.
 # [[collision detection|Collision detection]] {{qualifier|used by an Ethernet network to detect when two computers are sending frames at the same time, and also to deal with such collisions when they happen}}.
 # [[circular dichroism|Circular dichroism]].
 # [[chart datum]]
+# [[cross-dresser]]
 
 ====Translations====
 {{trans-top-also|abbreviations of compact-disc which are actually in use|compact disc}}
