--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -91,6 +91,7 @@ From 16th century {{m|en|cole-florye}}. Compare Latin {{m|la|caulis}}, French {{
 * Ukrainian: {{t|uk|кучеря́ва капу́ста|f|sc=Cyrl}}, {{t|uk|цвітна́ капу́ста|f|sc=Cyrl}}
 * Vietnamese: {{t|vi|bông cải trắng}}, {{t|vi|cải bông trắng}}, {{t|vi|cải hoa}}, {{t|vi|hoa lơ}}, {{t|vi|hoa lơ trắng}}, {{t|vi|su lơ}}, {{t|vi|súp lơ}}
 * Volapük: {{t+|vo|florabrasid}}
+* Wolof: {{t|wo|sufëlëer}}, {{t|wo|sufólóor}}
 {{trans-bottom}}
 
 {{trans-top|Edible head of a cauliflower plant}}
