--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -50,8 +50,7 @@
 * West Frisian: {{t|fy|West-Frysk}}
 {{trans-bottom}}
 
-{{checktrans-top}}
-Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
+{{checktrans-top}}<!-- Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.-->
 * French: {{t-check|fr|frison|m}}
 * Icelandic: {{t-check|is|frísneska|f}}
 * Swedish: {{t-check|sv|frisiska|c}}
