/* Old Norse */ cleanup <at#47455879>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -581,7 +581,7 @@ From {{der|nn|non|at}}. Cognate with {{cog|da|at}} and {{cog|sv|att}}.
 ==Old Norse==
 
 ===Etymology 1===
-From {{inh|non|gem-pro|*atǭ}}. Related to {{etyl|non|-}} {{m|ang|etja}}.
+From {{inh|non|gem-pro|*atǭ}}. Related to {{cog|ang|etja}}.
 
 ====Noun====
 {{non-noun|n|ats|ǫt}}
