--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -750,7 +750,7 @@ Borrowed from {{bor|sh|ota|آت|tr=at|notext=1}}.
 ==Simeulue==
 
 ===Etymology===
-From {{etyl|poz-pro|smr}} {{m|poz-pro|*əpat}}, from {{etyl|map-pro|smr}} {{m|map-pro|*Səpat}}.
+From {{der|smr|poz-pro|*əpat}}, from {{der|smr|map-pro|*Səpat}}.
 
 ===Numeral===
 {{head|smr|numeral}}
