--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -460,8 +460,8 @@ From {{inh|ga|sga|attaid||swells, dilates, increases|pos=v}}, from {{m|sga|att||
 ===References===
 * {{R:DIL|4925|head=att}}
 * {{R:DIL|4929|head=attaid}}
-* {{R:ga:Dinneen}}
-* {{R:ga:Dinneen|head=ataim}}
+* {{R:ga:Dinneen 1904|42}}
+* {{R:ga:Dinneen 1927|ataim}}
 * {{R:ga:Ó Dónaill}}
 
 ----
