--- a/en/e/epiboly.775580.wikitext
+++ b/en/e/epiboly.775580.wikitext
@@ -1,10 +1,10 @@
 ==English==
 
-===Etymology===
-From {{etyl|grc|en}} {{m|el|ἐπιβολή||addition}}
-
 ===Pronunciation===
 * {{IPA|ɛˈpɪbəli|lang=en}}
+
+===Etymology===
+{{bor|en|grc|ἐπιβολή||addition}}
 
 ===Noun===
 {{en-noun|-|epibolies}}
