--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -298,6 +298,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Slovene: {{t|sl|zavoj|m}}
 * Swahili: {{t+|sw|pinda}}
 * Swedish: {{t+|sv|kurva|c}}, {{t+|sv|krök|c}}, {{t+|sv|böj}}
+* Westrobothnian: {{t|gmq-bot|bøijel|m}}
 {{trans-bottom}}
 
 {{trans-top|knot}}
