--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -350,6 +350,8 @@ From {{inh|frp|la|canem}}, accusative singular of {{m|la|canis}}.
 ====Synonyms====
 * {{l|nv|ih}}
 
+[[Category:Navajo basic nouns]]
+
 ----
 
 ==Romanian==
