/* German */ cleanup <CD#47474313>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -159,7 +159,7 @@ From {{der|zh|en|CD}}.
 [[Image:CDLabelLightScribe WikipediaLogo.jpg|thumb|CD]]
 
 ===Etymology===
-From {{etyl|en|de}} {{m|en|CD}}.
+From {{der|de|en|CD}}.
 
 ===Pronunciation===
 * {{IPA|/tseˈdeː/|lang=de}}
