--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -291,7 +291,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Westrobothnian: {{t|gmq-bot|blistär}}
 {{trans-bottom}}
 
-{{trans-top|to move is such a way as to make a whistling sound}}
+{{trans-top|to move in such a way as to make a whistling sound}}
 * Breton: {{t+|br|c'hwitellat}}
 * Danish: {{t|da|hvisle}}
 * Dutch: {{t+|nl|fluiten}}
