--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -626,3 +626,4 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 [[Category:English 1-syllable words]]
 [[Category:English basic words]]
 [[Category:English irregular verbs]]
+[[Category:English class 7 strong verbs]]
