--- a/en/m/moonlighter.720229.wikitext
+++ b/en/m/moonlighter.720229.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun}}
 
-# A person who [[moonlight]]s, or works a second job on the side.
+# A person who [[moonlight]]s, or works a [[second job]] on the side.
 # {{lb|en|US|regional}} One who [[serenade]]s by moonlight.
 # A [[moonshiner]], who makes illicit alcohol.
 # {{lb|en|Ireland|historical}} One of a gang who used violence, especially at night, to promote [[agrarianism]] in Ireland during the {{w|Land War}} of the late 19th century.
