--- a/en/e/engraft.773715.wikitext
+++ b/en/e/engraft.773715.wikitext
@@ -8,7 +8,7 @@
 From earlier {{m|en|ingraft}}, equivalent to {{prefix|en|gloss1=in|graft|lang=en}}.
 
 ===Pronunciation===
-{{rfp|lang=en}}
+* {{IPA|/ɪŋˈɡɹæft/|/ɪŋˈɡɹɑːft/|lang=en}}
 
 ===Verb===
 {{en-verb}}
