--- a/en/e/engrafts.773768.wikitext
+++ b/en/e/engrafts.773768.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-{{rfp|lang=en}}
+* {{IPA|/ɪŋˈɡɹæfts/|/ɪŋˈɡɹɑːfts/|lang=en}}
 
 ===Verb===
 {{head|en|verb form}}
