t+de:[[simpel]] ([[WT:EDIT|Assisted]]) <simple#47491740>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -194,7 +194,7 @@ From {{inh|en|enm|simple}}, from {{bor|en|fro|-|notext=1}} and {{bor|en|fr|simpl
 * Dutch: {{t+|nl|achterlijk}}, {{t+|nl|simpel}}
 * French: {{t+|fr|simple|m|f}}
 * Galician: {{t|gl|simple|m|f}}
-* German: {{t+|de|einfach}}
+* German: {{t+|de|einfach}}, {{t+|de|simpel}}
 * Greek:
 *: Ancient: {{t|grc|εὐήθης}}, {{t|grc|ἁπλόος}}
 * Icelandic: {{t+|is|einfaldur|m}}
