--- a/en/h/haematidrosis.746522.wikitext
+++ b/en/h/haematidrosis.746522.wikitext
@@ -13,7 +13,7 @@
 From {{etyl|grc|en}} {{m|grc|αἷμα|αἵμᾰτ-|blood}} + {{m|grc|ἱδρόω||to sweat}}.
 
 ===Pronunciation===
-{{rfp|lang=en}}
+* {{IPA|/hiːmətaɪˈdɹəʊsɪs/|lang=en}}
 
 ===Noun===
 [[File:Hematohidrosis-Indian-Journal-Dermatology-Dermatol-2013-58-6-478-119964-f1.jpg|250px|thumb|'''blood sweat''']]
