/* Pronunciation */ alternative way <月#47498572>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -225,7 +225,7 @@ From {{der|ja|ltc|sort=かつ'|-}} {{ltc-l|月}}.
 
 ====Pronunciation====
 {{ja-pron|yomi=goon|-がつ}}
-* Some dictionaries apparently classify this reading as both [[呉音#Japanese|''goon'']] and [[慣用音#Japanese|''kan'yōon'']].
+* Some dictionaries apparently classify this reading as both ''{{ll|ja|呉音|goon}}'' and ''{{ll|ja|慣用音|kan'yōon}}''.
 
 ====Suffix====
 {{ja-pos|がつ|hhira=ぐわつ|suffix}}
