--- a/en/p/patrilateral.746570.wikitext
+++ b/en/p/patrilateral.746570.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-{{rfp|lang=en}}
+* {{IPA|/ˌpætɹɪˈlæt(ə)ɹəl/|lang=en}}
 
 ===Etymology===
 {{prefix|patri|lateral|lang=en}}
