--- a/en/z/zeppola.856126.wikitext
+++ b/en/z/zeppola.856126.wikitext
@@ -1,5 +1,5 @@
 ==English==
-[[File:Zeppula.jpg|thumb|a Neapolitan '''zeppola''']]
+[[File:Zeppula.jpg|thumb|210px|a Neapolitan '''zeppola''']]
 
 ===Alternative forms===
 * {{alter|en|zeppole}}
@@ -16,6 +16,11 @@ From the {{bor|en|it|zeppola|notext=1}}.
 # {{def|Any of several varieties of traditional [[fried]] [[pastry]] from southern [[Italy]].}}
 #* {{quote-journal|2009|January 25|Jeff Vandam|Brio Inside the Brownstones|New York Times|url=http://www.nytimes.com/2009/01/25/realestate/25livi.html
 |passage=These days it might be easier to pick up a Wi-Fi signal than a rice ball or some '''zeppole''', but what’s nice is that the zeppole are still here: the neighborhood’s old guard has remained reassuringly in place.}}
+
+====Translations====
+{{trans-top|any of several varieties of fried pastry from southern Italy}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ====Further reading====
 * {{pedialite}}
