t+it:[[zeppola]] t+scn:[[zìppula]] t+sc:[[tzìpula]] t+nap:[[zeppula]] t+nap:[[zéppula]] t-balance ([[WT:EDIT|Assisted]]) <zeppola#47504729>

--- a/en/z/zeppola.856126.wikitext
+++ b/en/z/zeppola.856126.wikitext
@@ -19,7 +19,11 @@ From the {{bor|en|it|zeppola|notext=1}}.
 
 ====Translations====
 {{trans-top|any of several varieties of fried pastry from southern Italy}}
+* Italian: {{t|it|zeppola|f}}
+* Neapolitan: {{t|nap|zeppula|f}}, {{t|nap|zéppula|f}}
 {{trans-mid}}
+* Sardinian: {{t|sc|tzìpula|f}}
+* Sicilian: {{t|scn|zìppula|f}}
 {{trans-bottom}}
 
 ====Further reading====
