--- a/en/z/zeppola.856126.wikitext
+++ b/en/z/zeppola.856126.wikitext
@@ -20,7 +20,7 @@ From the {{bor|en|it|zeppola|notext=1}}.
 ====Translations====
 {{trans-top|any of several varieties of fried pastry from southern Italy}}
 * Italian: {{t|it|zeppola|f}}
-* Neapolitan: {{t|nap|zeppula|f}}, {{t|nap|zéppula|f}}
+* Neapolitan: {{t|nap|zeppola|f}}, {{t|nap|zéppola|f}}
 {{trans-mid}}
 * Sardinian: {{t|sc|tzìpula|f}}
 * Sicilian: {{t|scn|zìppula|f}}
