--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -150,7 +150,7 @@ From {{inh|en|enm|simple}}, from {{bor|en|fro|-|notext=1}} and {{bor|en|fr|simpl
 * Rajasthani: {{t-needed|raj}}
 * Romanian: {{t+|ro|simplu|m|n}}, {{t|ro|necomplicat|m|n}}
 * Romansch: {{t|rm|simpel}} {{qualifier|Rumantsch Grischun, Surmiran, Puter, Vallader}}, {{t|rm|sempel}} {{qualifier|Sursilvan, Sutsilvan}}
-* Russian: {{t+|ru|просто́й|m}}, {{qualifier|easy}} {{t+|ru|лёгкий|tr=ljóxkij}}
+* Russian: {{t+|ru|просто́й|m}}, {{qualifier|easy}} {{t+|ru|лёгкий}}
 * Scots: {{t-needed|sco}}
 * Scottish Gaelic: {{t|gd|sìmplidh}}
 * Serbo-Croatian:
