--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -62,6 +62,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Arabic: {{t|ar|أرنب|m|alt=أَرْنَب}}
 * Armenian: {{t+|hy|ճագար|sc=Armn}}
 * Aromanian: {{t|rup|ljepuri|m}}, {{t+|rup|ljepure|m}}, {{t|rup|ljepur|m}}
+* Assamese: {{t|as|শহা}}, {{t|as|শহাপহু}}
 * Asturian: {{t|ast|conexu|m}}
 * Azeri: {{t+|az|dovşan}}
 * Bashkir: {{t|ba|ҡуян|sc=Cyrl}}
