--- a/en/z/zoophile.802731.wikitext
+++ b/en/z/zoophile.802731.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun}}
 
-# A person sexually attracted to [[animal]]s.
+# An animal rapist
 
 ====Synonyms====
 * [[bestialist]], [[zoosexual]]
