t+cmn:[[在耐心的极限]] t-balance ([[WT:EDIT|Assisted]]) <at the end of one's tether#47518454>

--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -10,8 +10,10 @@
 
 ====Translations====
 {{trans-top|At the limit of one’s patience}}
+* Chinese:
+*: Mandarin: {{t|cmn|在耐心的极限|tr=zài nàixīn de jíxiàn}}
 * French: {{t+|fr|au bout du rouleau}}
-* Korean: {{t|ko|진퇴양난에 빠진}}
 {{trans-mid}}
+* Korean: {{t|ko|진퇴양난에 빠진}}
 * Scottish Gaelic: {{t|gd|aig an dùbhlan le}}
 {{trans-bottom}}
