--- a/en/f/four-vector.855376.wikitext
+++ b/en/f/four-vector.855376.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 {{en-noun|head=[[four]]-[[vector]]}}
 
-# {{lb|en|mathematics}} A vector in [[four-dimensional]] [[vector space]], especially one having three [[spatial]] and one [[temporal]] dimensions
+# {{lb|en|mathematics}} A vector in [[four-dimensional]] [[vector space]], especially one having three [[spatial]] dimensions and one [[temporal]] dimension.
 
 ====Translations====
 {{trans-top|vector in four-dimensional vector space}}
