--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -34,6 +34,7 @@
 * Polish: (język) {{t|pl|zachodniofryzyjski|m}}
 * Portuguese: {{t+|pt|frísio|m}}, {{t+|pt|frisão|m}}
 * Russian: {{t|ru|западнофри́зский|m}} {{qualifier|язы́к}}, {{t+|ru|фри́зский|m}} {{qualifier|язы́к}}
+* Scots: {{t|sco|Wast Frisie}}
 * Spanish: {{t+|es|frisón|m}}, {{t+|es|frisio|m}}
 * Swedish: {{t|sv|västfrisiska|c}}
 * West Frisian: {{t+|fy|Frysk}}
