t+sco:[[Transnistrie]] ([[WT:EDIT|Assisted]]) <Transnistria#47528409>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -59,6 +59,7 @@ From {{bor|en|ro|Transnistria|notext=1}}, from {{der|en|la|trans-}} + {{der|en|r
 * Romanian: {{t|ro|Transnistria|f}}
 *: Cyrillic: {{t|ro|Транснистриа|f|sc=Cyrl}}
 * Russian: {{t+|ru|Приднестро́вье|n}}
+* Scots: {{t|sco|Transnistrie}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Придњестровље|n|sc=Cyrl}}
 *: Roman: {{t|sh|Pridnjestrovlje|n}}
