--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -120,7 +120,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 * Hebrew: {{t+|he|מִשְׁקָל|m|tr=mishkál|sc=Hebr}}
 * Hindi: {{t+|hi|भार|m|sc=Deva}}
 * Hungarian: {{t+|hu|súly}}
-* Icelandic: {{t-needed|is}}
+* Icelandic: {{t+|is|þyngd}}
 * Ido: {{t+|io|pezo}}
 * Indonesian: {{t+|id|berat}}, {{t+|id|bobot}}
 * Irish: {{t|ga|meáchan|m}}
