--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ɑp|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|coppe}}, from {{etyl|ang|en}} {{m|ang|*coppe}}, as in {{m|ang|ātorcoppe||spider|lit=venom head}}, from {{etyl|ang|en}} {{m|ang|copp||top, summit, head}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kuppaz||vault, round vessel, head}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gū-||to bend, curve}}. Cognate with {{cog|dum|koppe}}, {{m|dum|kobbe||spider}}. More at {{l|en|cobweb}}.
+From {{inh|en|enm|coppe}}, from {{inh|en|ang|*coppe}}, as in {{m|ang|ātorcoppe||spider|lit=venom head}}, from {{der|en|ang|copp||top, summit, head}}, from {{inh|en|gem-pro|*kuppaz||vault, round vessel, head}}, from {{inh|en|ine-pro|*gū-||to bend, curve}}. Cognate with {{cog|dum|koppe}}, {{m|dum|kobbe||spider}}. More at {{l|en|cobweb}}.
 
 ====Noun====
 {{en-noun}}
@@ -99,7 +99,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 {{trans-bottom}}
 
 ===Etymology 4===
-{{etyl|ang|en}} {{m|ang|cop}}, {{m|ang|copp}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kuppaz||vault, basin, round object}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gu-}}. Cognate with Dutch {{m|nl|kop}}, German {{m|de|Kopf}}.
+From {{inh|en|ang|cop}}, {{m|ang|copp}}, from {{inh|en|gem-pro|*kuppaz||vault, basin, round object}}, from {{inh|en|ine-pro|*gu-}}. Cognate with {{cog|nl|kop}}, {{cog|de|Kopf}}.
 
 ====Noun====
 {{en-noun}}
@@ -127,7 +127,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 ==Catalan==
 
 ===Etymology===
-From {{etyl|roa-oca|ca}} {{m|roa-oca|colp}}, from {{etyl|LL.|ca}} {{m|la|colpus||stroke}}, from earlier {{etyl|la|ca}} {{m|la|colaphus}}.
+From {{inh|ca|roa-oca|colp}}, from {{etyl|LL.|ca}} {{m|la|colpus||stroke}}, from earlier {{inh|ca|la|colaphus}}.
 
 ===Pronunciation===
 * {{ca-IPA|ò}}
@@ -159,7 +159,7 @@ From {{etyl|roa-oca|ca}} {{m|roa-oca|colp}}, from {{etyl|LL.|ca}} {{m|la|colpus|
 ==Czech==
 
 ===Etymology===
-From {{etyl|de|cs}} {{m|de|Zopf}}.
+{{bor|cs|de|Zopf}}.
 
 ===Noun===
 {{cs-noun|g=m}}
@@ -197,6 +197,9 @@ A shortened form of [[copain]].
 ----
 
 ==Slovak==
+
+===Etymology===
+From {{der|sk|de|Zopf}}.
 
 ===Pronunciation===
 * {{IPA|/ˈt͡sɔp/|lang=sk}}
