--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -161,3 +161,4 @@ Synthetic comparative and superlative forms (''[[crooker]]'', ''[[crookest]]'') 
 <references/>
 
 [[Category:en:Crime]]
+[[Category:en:People]]
