--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -242,11 +242,11 @@ Sense of "group of military officers that assists a commander" and similar meani
 ==French==
 {{wikipedia|lang=fr}}
 
-===Etymology 1===
-19th century - Obscure, possibly from {{etyl|de|fr}} {{m|de|staffieren}} or Old French {{m|fro|estofer}} (modern French {{m|fr|étoffer}})
-
-====Pronunciation====
+===Pronunciation===
 * {{fr-IPA}}
+
+===Etymology 1===
+19th century. Obscure, possibly from {{etyl|de|fr}} {{m|de|staffieren}} or Old French {{m|fro|estofer}} (modern French {{m|fr|étoffer}})
 
 ====Noun====
 {{fr-noun|m}}
@@ -259,10 +259,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * {{l|fr|staffeur}}
 
 ===Etymology 2===
-20th century - from {{etyl|en|fr}} {{m|en|staff}}
-
-====Pronunciation====
-* {{IPA|/staf/|lang=fr}}
+20th century. From {{etyl|en|fr}} {{m|en|staff}}
 
 ====Noun====
 {{fr-noun|m}}
