t+da:[[boble]] ([[WT:EDIT|Assisted]]) <bubble#47552179>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -311,6 +311,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 ====Translations====
 {{trans-top|to rise up in bubbles}}
 * Bulgarian: {{t+|bg|кипя}}, {{t+|bg|клокоча}}
+* Danish: {{t+|da|boble}}
 * Esperanto: {{t|eo|bobeli}}
 * Finnish: {{t|fi|kuplia}}, {{t|fi|poreilla}}, {{t|fi|porista}}
 * French: {{t+|fr|bouillonner}}
