--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -179,3 +179,4 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 
 [[Category:English 1-syllable words]]
 [[Category:en:People]]
+[[Category:en:Directives]]
