/* Noun */ <inside job#47585585>

--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -4,6 +4,14 @@
 {{en-noun}}
 
 # {{lb|en|idiomatic}} A [[crime]] or other [[illicit]] [[action]] committed by or with the [[help]] of someone either [[employ]]ed by the [[victim]] or [[entrust]]ed with access to the victim's [[affair]]s and [[premise]]s.
+#* {{quote-journal
+|date=September 23, 2017
+|author=
+|title=From north Wales to Norfolk, distraught beekeepers ask: who’s stealing our hives?
+|work=The Observer
+|url=https://www.theguardian.com/uk-news/2017/sep/23/beekeepers-ask-who-stealing-hives-north-wales-norfolk
+|page=
+|passage=In Britain, where the British BeeKeepers Association (BBKA) has been urging members to microchip their hives for some time, the continuing mystery and the belief that the crimes are '''inside jobs''' are taking their toll.}}
 #* '''1921''', [[w:Louis_Joseph_Vance|Louis Joseph Vance]], ''Alias The Lone Wolf'', ch. 10,
 #*: It seems to me it must have been what the police at home call "'''an inside job'''"; because whoever it was apparently knew the combination of the safe.
 
