Wrong information <bled#47587877>

--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -35,7 +35,7 @@ North African.
 ==French==
 
 ===Etymology===
-From {{etyl|arq|fr}}, from {{etyl|ar|fr}} {{m|ar|بِلَاد}}
+From Moroccan Darija, from {{etyl|ar|fr}} {{m|ar|بِلَاد}}
 
 ===Pronunciation===
 * {{IPA|/blɛd/|lang=fr}}
