/* Translations */ corr Tibetan <rabbit#47589682>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -203,7 +203,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Tatar: {{t|tt|йорт куяны|sc=Cyrl}}, {{t+|tt|куян|sc=Cyrl}}
 * Telugu: {{t+|te|కుందేలు}}
 * Thai: {{t+|th|กระต่าย}}
-* Tibetan: {{t|bo|ཡོས|sc=Tibt}}
+* Tibetan: {{t|bo|རི་བོང}}, {{t|bo|ཡོས|sc=Tibt}} {{qualifier|as in “year of the rabbit”}}
 * Torres Strait Creole: {{t-needed|tcs}}
 * Tswana: {{t|tn|mmutla}}
 * Turkish: {{t+|tr|ada tavşanı}}, {{t+|tr|tavşan}}
