/* Derived terms */ <weight#47602623>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -82,6 +82,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 |weightlifting
 |weight loss
 |weight of the world
+|weight-watcher
 |weighty
 |welterweight
 }}
