/* Norwegian Nynorsk */ cleanup <minimum#47640206>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -195,7 +195,7 @@ From {{der|nb|la|minimum}}
 ==Norwegian Nynorsk==
 
 ===Etymology===
-From {{etyl|la|nn}} {{m|la|minimum}}
+From {{der|nn|la|minimum}}
 
 ===Noun===
 {{nn-noun-n1}}
