--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -102,6 +102,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 *: Egyptian Arabic: {{t|arz|تاني|tr=tani|sc=Arab}}, {{t|arz|كمان|tr=kaman - kman|sc=Arab}}
 * Aragonese: {{t-needed|an}}
 * Armenian: {{t+|hy|էլի}}, {{t+|hy|կրկին}}, {{qualifier|Eastern-Armenian}} {{t+|hy|նորից}}, {{qualifier|Western-Armenian}} {{t+|hy|նորեն}}
+* Assamese: {{t|as|আকৌ}}
 * Asturian: {{t|ast|otra vez}}, {{t|ast|otra vegada}}, {{t|ast|de nuevo}}
 * Avar: {{t|av|жеги}}
 * Azeri: {{t|az|yenidən}}, {{t|az|yenə}}
