t+pt:[[apanhar]] ([[WT:EDIT|Assisted]]) <seize#47667979>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -78,7 +78,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Old Portuguese: {{t|roa-opt|tomar}}
 * Ottoman Turkish: {{t|ota|استولى على|tr=istevli ele|sc=ota-Arab}}
 * Polish: {{t+|pl|chwycić|pf}}, {{t+|pl|złapać}}, {{t+|pl|chwytać|impf}}, {{t+|pl|łapać|impf}}
-* Portuguese: {{t+|pt|agarrar}}, {{t+|pt|capturar}}
+* Portuguese: {{t+|pt|agarrar}}, {{t+|pt|capturar}}, {{t+|pt|apanhar}}
 * Russian: {{t+|ru|захва́тывать|impf}}, {{t+|ru|захвати́ть|pf}}, {{t+|ru|схва́тывать|impf}}, {{t+|ru|схвати́ть|pf}}
 * Shan: {{t|shn|ယွပ်း|tr=jɔp4}}
 * Spanish: {{t+|es|agarrar}}, {{t|es|apoderarse de}}, {{t+|es|apresar}}, {{t+|es|aferrar}}
