/* Descendants */ desc <began#47680352>

--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -64,7 +64,7 @@ From {{prefix|be|gān|lang=ang}}.
 * {{l|ang|unbegān}}
 
 ====Descendants====
-* English: {{l|en|bego}}
+* {{desc|en|bego}}
 
 ====References====
 * 1916, John R. Clark, "A Concise Anglo-Saxon Dictionary for the Use of Students", begān
