t+nci:[[cueloa]] t+nci:[[cuelpachoa]] ([[WT:EDIT|Assisted]]) <bend#47720966>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -68,6 +68,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Bulgarian: {{t+|bg|извивам}}, {{t+|bg|превивам}}
 * Chinese:
 *: Mandarin: {{t+check|cmn|屈|tr=qū|sc=Hani}}, {{t+check|cmn|曲|tr=qū|sc=Hani}}, {{t+|cmn|彎|sc=Hani}}, {{t+|cmn|弯|tr=wān|sc=Hani}}
+* Classical Nahuatl: {{t|nci|cuēloā}}, {{t|nci|cuelpachoā}}
 * Czech: {{t+|cs|ohnout}}
 * Dutch: {{t+|nl|buigen}}, {{t+|nl|plooien}}
 * Esperanto: {{t|eo|kurbigi}}, {{t+|eo|fleksi}}
